# ml-assignment

./: .gitignore  diagram.dot  ml-genshin.py  ml-titanic.py  ml-xor.py  mnist.py  model_cnn.keras  pyproject.toml  titanic.csv  tree.py
