[tool.poetry]
name = "ml-assignment"
version = "0.1.0"
description = "wsb assignment"
authors = ["Denis Wojtkowiak"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow-macos = { version = "^2.15.0", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
tensorflow = "^2.13.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
networkx = "3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
